--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -12,13 +12,10 @@
     margin: 5%;
     width: 90%;
     height: 78%;
-    background-color: rgb(93, 116, 126);
-    border: 1px solid rgb(112, 112, 112);
+    border: 1px solid rgb(250, 246, 246);
     padding: 20px;
     box-sizing: border-box;
-    -webkit-box-shadow: -2px 3px 40px 12px rgba(0,0,0,0.55);
-    -moz-box-shadow: -2px 3px 40px 12px rgba(0,0,0,0.55);
-    box-shadow: -2px 3px 40px 12px rgba(0,0,0,0.55);
+    border-radius: 10px;
 }
 
 .home-thumbnails .home-thumbnail {
@@ -33,6 +30,8 @@
     max-width: 250px;
     height: 210px;
     vertical-align: top;
+    -webkit-box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8); 
+    box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8);
 }
 
 .home-thumbnails .home-thumbnail:hover {
