--- a/src/graphics/OverlayComponent/ViewButtonsPanel/index.css
+++ b/src/graphics/OverlayComponent/ViewButtonsPanel/index.css
@@ -1,14 +1,7 @@
-.view-buttons-panel-wrapper {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    bottom: 10px;
-    z-index: 5;
-    pointer-events: visiblefill;
-}
 .view-buttons-panel {
     font-size: 15px;
     text-align: center;
+    display: inline-block;
 }
 
 .view-buttons-panel .btn-group {
@@ -27,9 +20,10 @@
     display: block;
     color: #CCC;
     font-size: 15px;
-    background: rgba(1,1,1,0.3);
+    background: rgba(122, 122, 122, 0.3);
     width: fit-content;
     width: -moz-fit-content;
     margin: auto;
     padding: 3px 20px;
+    border: 1px solid #454545;
 }
