--- a/src/graphics/OverlayComponent/index.css
+++ b/src/graphics/OverlayComponent/index.css
@@ -27,16 +27,16 @@
 }
 
 .overlay-layer .speak-btn {
-    position: absolute;
-    right: 30px;
-    bottom: 30px;
-    font-size: 25px;
+    font-size: 30px;
     z-index: 10;
-    background-color: rgba(1, 1, 1, 0.2);
-    padding: 10px 10px;
+    background-color: rgba(209, 209, 209, 0.2);
+    padding: 5px 5px;
     border-radius: 30px;
     pointer-events: visiblefill;
     cursor: pointer;
+    display: inline-block;
+    -webkit-box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8);
+    box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8);
 }
 
 .speak-btn .icon-neutral {
@@ -52,20 +52,25 @@
 }
 
 .overlay-layer .hide-layer-btn {
-    font-size: 25px;
     z-index: 10;
-    background-color: rgba(1, 1, 1, 0.2);
-    padding: 10px 10px;
-    border-radius: 30px;
     width: fit-content;
     width: -moz-fit-content;
-    margin: 10px auto;
     pointer-events: visiblefill;
     cursor: pointer;
+    font-size: 30px;
+    background-color: rgba(209, 209, 209, 0.2);
+    padding: 5px 5px;
+    border-radius: 30px;
+    display: inline-block;
+    -webkit-box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8);
+    box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8);
+    position: absolute;
+    top: 10px;
+    left: calc(50% - 20px);
 }
 
 .hide-layer-btn .visibility-icon {
-    color: #0100f6;
+    color: #c3c2ce;
 }
 
 .overlay-layer .hidden {
@@ -73,10 +78,8 @@
 }
 
 .overlay-layer .back-home {
-    position: absolute;
-    left: 30px;
-    bottom: 30px;
     font-size: 25px;
     pointer-events: all;
     z-index: 10;
+    display: inline-block;
 }
