--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -1,39 +1,61 @@
 .home-wrapper {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    background: rgb(65, 118, 130);
-    background: linear-gradient(315deg, rgb(65, 118, 130) 0%, rgba(24,24,92,1) 50%, rgba(0,120,144,1) 93%);
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  background: rgb(65, 118, 130);
+  background: linear-gradient(
+    315deg,
+    rgb(65, 118, 130) 0%,
+    rgba(24, 24, 92, 1) 50%,
+    rgba(0, 120, 144, 1) 93%
+  );
 }
 
 .home-thumbnails {
-    margin: 5%;
-    width: 90%;
-    height: 78%;
-    border: 1px solid rgb(250, 246, 246);
-    padding: 20px;
-    box-sizing: border-box;
-    border-radius: 10px;
+  margin: 5%;
+  width: 90%;
+  height: 78%;
+  border: 1px solid rgba(250, 246, 246, 0.4);
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
 
 .home-thumbnails .home-thumbnail {
-    display: inline-block;
-    cursor: pointer;
-    padding: 10px 25px;
-    margin: 10px;
-    background-color: rgb(130, 152, 161);
-    border: 1px solid #bdbdbd;
-    border-radius: 10px;
-    user-select: none;
-    max-width: 250px;
-    height: 210px;
-    vertical-align: top;
-    -webkit-box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8); 
-    box-shadow: 1px -1px 24px -1px rgba(0,0,0,0.8);
+  display: inline-block;
+  cursor: pointer;
+  padding: 10px 25px;
+  margin: 10px;
+  background-color: rgb(130, 152, 161);
+  border: 1px solid #bdbdbd;
+  border-radius: 10px;
+  user-select: none;
+  max-width: 250px;
+  height: 210px;
+  vertical-align: top;
+  -webkit-box-shadow: 1px -1px 24px -1px rgba(0, 0, 0, 0.8);
+  box-shadow: 1px -1px 24px -1px rgba(0, 0, 0, 0.8);
 }
 
 .home-thumbnails .home-thumbnail:hover {
-    background-color: rgb(159, 174, 180);
+  background-color: rgb(159, 174, 180);
+}
+
+.blue-eye-title {
+  font-size: 30px;
+  color: #fff;
+  font-weight: bold;
+  position: absolute;
+  right: 600px;
+  top: 0px;
+  background-color: #0d27aa;
+  padding: 10px 60px;
+  border-radius: 0 0 60px 60px;
+  font-style: italic;
+  letter-spacing: 2px;
+  -webkit-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
 }
