color change title div

--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -50,7 +50,7 @@
   position: absolute;
   right: 600px;
   top: 0px;
-  background-color: #0d27aa;
+  background-color: #2f3c80;
   padding: 10px 60px;
   border-radius: 0 0 60px 60px;
   font-style: italic;
