change in the position of title

--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -48,7 +48,7 @@
   color: #fff;
   font-weight: bold;
   position: absolute;
-  right: 600px;
+  right: 20%;
   top: 0px;
   background-color: #2f3c80;
   padding: 10px 60px;
