--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -7,9 +7,9 @@
   background: rgb(65, 118, 130);
   background: linear-gradient(
     315deg,
-    rgb(65, 118, 130) 0%,
-    rgba(24, 24, 92, 1) 50%,
-    rgba(0, 120, 144, 1) 93%
+    rgb(128, 128, 128) 0%,
+    rgb(90, 90, 90) 50%,
+    rgb(117, 117, 117) 93%
   );
 }
 
@@ -28,7 +28,7 @@
   cursor: pointer;
   padding: 10px 25px;
   margin: 10px;
-  background-color: rgb(130, 152, 161);
+  background-color: rgb(169, 175, 177);
   border: 1px solid #bdbdbd;
   border-radius: 10px;
   user-select: none;
@@ -44,18 +44,18 @@
 }
 
 .blue-eye-title {
-  font-size: 30px;
+  font-size: 25px;
   color: #fff;
   font-weight: bold;
   position: absolute;
   right: 20%;
-  top: 0px;
-  background-color: #2f3c80;
+  top: 5px;
+  background-color: #001792;
   padding: 10px 60px;
-  border-radius: 0 0 60px 60px;
+  border-radius: 20px 20px 20px 20px;
   font-style: italic;
   letter-spacing: 2px;
   -webkit-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -4px 9px 36px 0px rgba(222, 222, 222, 0.75);
 }
