--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -14,13 +14,9 @@
 }
 
 .home-thumbnails {
-  margin: 5%;
-  width: 90%;
-  height: 78%;
-  border: 1px solid rgba(250, 246, 246, 0.4);
   padding: 20px;
-  box-sizing: border-box;
-  border-radius: 10px;
+  overflow-y: auto;
+  height: calc(100% - 150px);
 }
 
 .home-thumbnails .home-thumbnail {
@@ -32,7 +28,7 @@
   border: 1px solid #bdbdbd;
   border-radius: 10px;
   user-select: none;
-  max-width: 250px;
+  max-width: 220px;
   height: 210px;
   vertical-align: top;
   -webkit-box-shadow: 1px -1px 24px -1px rgba(0, 0, 0, 0.8);
@@ -43,19 +39,32 @@
   background-color: rgb(159, 174, 180);
 }
 
+.home-wrapper .title-area {
+  padding: 10px 30px;
+}
+
 .blue-eye-title {
+  display: inline-block;
   font-size: 25px;
   color: #fff;
   font-weight: bold;
-  position: absolute;
-  right: 20%;
-  top: 5px;
   background-color: #001792;
-  padding: 10px 60px;
-  border-radius: 20px 20px 20px 20px;
-  font-style: italic;
+  padding: 10px 15px;
+  border-radius: 35px;
   letter-spacing: 2px;
   -webkit-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
   box-shadow: -4px 9px 36px 0px rgba(222, 222, 222, 0.75);
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.blue-eye-title img {
+  width: 50px;
+  height: 50px;
+}
+
+.blue-eye-title span {
+  vertical-align: middle;
 }
