--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -14,7 +14,7 @@
 }
 
 .home-thumbnails {
-  padding: 10px;
+  padding: 10px 30px;
   overflow-y: auto;
   height: calc(100% - 150px);
 }
@@ -22,13 +22,13 @@
 .home-thumbnails .home-thumbnail {
   display: inline-block;
   cursor: pointer;
-  padding: 0px 25px;
-  margin: 10px;
+  padding: 0px 10px;
+  margin: 10px 0px;
   background-color: #a9afb1;
   border: 1px solid #bdbdbd;
   border-radius: 10px;
   user-select: none;
-  width: 80%;
+  width: 90%;
   vertical-align: top;
   -webkit-box-shadow: 1px -1px 24px -1px rgba(0,0,0,.8);
   box-shadow: 1px -1px 24px -1px rgba(0,0,0,.8);
@@ -40,10 +40,13 @@
 
 .home-thumbnails .home-thumbnail h3 {
   margin: 5px;
+  color: #424242;
 }
 
 .home-thumbnails .home-thumbnail p {
   margin: 5px;
+  font-size: 14px;
+  color: #3c3c3c;
 }
 
 .home-wrapper .title-area {
@@ -56,7 +59,7 @@
   color: #fff;
   font-weight: bold;
   background-color: #001792;
-  padding: 10px 15px;
+  padding: 10px 40px 10px 15px;
   border-radius: 35px;
   letter-spacing: 2px;
   -webkit-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
