--- a/src/app/components/Home/index.css
+++ b/src/app/components/Home/index.css
@@ -20,7 +20,7 @@
 }
 
 .home-thumbnails .home-thumbnail {
-  display: inline-block;
+  display: flex;
   cursor: pointer;
   padding: 0px 10px;
   margin: 10px 0px;
@@ -49,24 +49,30 @@
   color: #3c3c3c;
 }
 
+.home-thumbnails .home-thumbnail-descr {
+  padding: 16px;
+}
+
+.home-thumbnails .home-thumbnail-img {
+  padding: 16px;
+}
+
+.home-thumbnails img {
+  height: 96px;
+}
+
 .home-wrapper .title-area {
   padding: 10px 30px;
 }
 
 .blue-eye-title {
-  display: inline-block;
-  font-size: 25px;
+  display: flex;
+  font-size: 36px;
   color: #fff;
   font-weight: bold;
-  background-color: #001792;
-  padding: 10px 40px 10px 15px;
-  border-radius: 35px;
+  padding: 32px 32px 16px 0px;
   letter-spacing: 2px;
-  -webkit-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: -4px 9px 36px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: -4px 9px 36px 0px rgba(222, 222, 222, 0.75);
-  justify-content: space-between;
-  display: flex;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -77,4 +83,5 @@
 
 .blue-eye-title span {
   vertical-align: middle;
+  margin-left: 16px;
 }
